# BayStateConsolidator

./: .gitignore  README.md  pyproject.toml
src/baystate_consolidator/: __main__.py  main.py  script_main.py
src/baystate_consolidator/api/: routes.py
src/baystate_consolidator/core/: normalization.py  taxonomy.py
src/baystate_consolidator/models/: golden_record.py  raw.py  schema.py
src/baystate_consolidator/normalizers/: price.py  text.py
src/baystate_consolidator/pipelines/: dedupe.py
src/baystate_consolidator/services/: ocr.py
src/baystate_consolidator/utils/: database.py
tests/unit/: test_normalization.py  test_normalizers.py
