[tool.poetry]
name = "baystate-consolidator"
version = "0.1.0"
description = "Product data consolidation, normalization, and deduplication engine for Bay State"
authors = ["Bay State Engineering <engineering@baystate.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
supabase = "*"
pydantic = "*"
instructor = "*"
openai = "*"
polars = "*"
splink = "*"
quantulum3 = "*"
price-parser = "*"
duckdb = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
